--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroicons/react": "^2.2.0",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.81.1",
+    "@vercel/speed-insights": "^1.2.0",
     "next": "16.0.3",
     "react": "19.2.0",
     "react-dom": "19.2.0"
