--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@supabase/supabase-js": "^2.81.1",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
-    "next": "16.0.3",
+    "next": "^16.0.7",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
