--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -394,7 +394,7 @@ entrypoint = "./functions/sync-all-cs2-steam/index.ts"
 
 [functions.steam-link-start]
 enabled = true
-verify_jwt = true
+verify_jwt = false
 import_map = "./functions/steam-link-start/deno.json"
 entrypoint = "./functions/steam-link-start/index.ts"
 
